# py-shinydashboard

./: .gitignore  MANIFEST.in  README.md  pyrightconfig.json  requirements-dev.in  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
docs/: Makefile  README.md
docs/source/: conf.py  index.rst
examples/: app-stripped.py  app.py
examples/dynamic/: app.py
examples/interestcalc/: app.py  reactive_values.py  scenario_card.py  textedit.py
examples/interestcalc/www/: textedit.css  textedit.js
shinydashboard/: __init__.py  _body.py  _card.py  _dropdown.py  _htmldeps.py  _layout.py  _sidebar.py  _utils.py  _valuebox.py
shinydashboard/js/: shinydashboard.js
shinydashboard/shinydashboard/css/: shinydashboard.css
shinydashboard/www/adminlte/js/: adminlte.js  adminlte.js.map  adminlte.min.js  adminlte.min.js.map
srcts/: index.ts  output_binding_menu.ts  package.json  tabs.ts  tsconfig.json
