[metadata]
name = shinydashboard
version = attr: shinydashboard.__version__
author = Joe Cheng
author_email = joe@rstudio.com
url = https://github.com/jcheng5/py-shinydashboard
description = A UI library for Shiny for Python, based on the AdminLTE dashboarding CSS framework.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/jcheng5/py-shinydashboard/issues
    Documentation = https://shiny.rstudio.com/py/
    Source Code = https://github.com/jcheng5/py-shinydashboard



[options]
python_requires = >=3.7
packages = find:
test_suite = tests
include_package_data = True
setup_requires =
    setuptools
install_requires =
    typing-extensions>=4.0.1
    htmltools>=0.1.2
    shiny>=0.2.5
tests_require =
    pytest>=3
zip_safe = False

[options.packages.find]
include = shinydashboard, shinydashboard.*

[options.package_data]
shinydashboard = py.typed

[flake8]
# E302: Expected 2 blank lines
# E501: Line too long
# F403: 'from module import *' used; unable to detect undefined names
# F405: Name may be undefined, or defined from star imports
# W503: Line break occurred before a binary operator
ignore = E302, E501, F403, F405, W503
exclude = docs, .venv

[tox:tox]
envlist = mytestenv

[testenv]
deps =
    pytest
    pytest-asyncio
    pytest-playwright
    psutil
    shiny
    matplotlib
    pandas
    ipyleaflet
    shinywidgets
commands =
    # We are currently ONLY using tox for running e2e tests.
    playwright install
    pytest {posargs:e2e}
